<?xml version="1.0"?>
<package>
  <name>core_nav</name>
  <version>0.1.0</version>
  <description>Core Navigation</description>

  <author email="cakilic@mix.wvu.edu">Cagri Kilic</author>
  <maintainer email="cakilic@mix.wvu.edu">Cagri Kilic</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>hw_interface_plugin_roboteq</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>hw_interface_plugin_roboteq</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
